--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "env-cmd -f .env.production node server.js",
+    "dev": "env-cmd -f .env.local nodemon server.js",
+    "staging": "env-cmd -f .env.staging nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "mongodb": "^6.17.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "env-cmd": "^10.1.0"
   }
 }
