--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "classnames": "^2.5.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.47.0",
+    "@typescript-eslint/parser": "^8.47.0",
     "env-cmd": "^11.0.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7"
